<resources>
    <string name="app_name">DeshBidesh</string>
    <string name="DatabaseName">DeshBidesh_DB</string>

    <string name="Database_update">DatabaseUpdateTime</string>

    <string name="save_button">Save</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="editButtonText">edit</string>
    <string name="closeButtonText">close</string>

    <!-- Preference Contact  -->
    <string name="contact_app_title">Title</string>
    <string name="contact_app_subtitle">Subtitle</string>

    <string name="contact_header">Contact</string>
    <string name="contact_name">Manager</string>
    <string name="contact_email">Email</string>

    <!-- Preference Legal -->
    <string name="legal_header">Terms and Conditions</string>
    <string name="legal_disclaimer">Legal Disclaimer</string>
    <string name="legal_privacy">Privacy</string>
    <string name="legal_summary">Click to view</string>

    <!-- Preference Social -->
    <string name="social_header">Find us</string>
    <string name="default_news_title">News title</string>
    <string name="default_news_description">News description</string>
    <string name="default_date">Default date</string>

    <string name="search_deshbidesh_news">Search</string>
    <string name="retry">retry</string>
    <string name="no_results">no_results</string>

    <string name="admob_id">ca-app-pub-5045003235700565~9090083114</string>
    <string name="main_activity_screen_banner_id">ca-app-pub-5045003235700565/4713862018</string>
    <string name="home_fragment_screen_banner_id">ca-app-pub-5045003235700565/6442710802</string>
    <string name="news_fragment_screen_native_id">ca-app-pub-5045003235700565/7985719151</string>
    <string name="news_list_screen_banner_id">ca-app-pub-5045003235700565/4525620754</string>

    <string name="left">LEFT</string>

</resources>